enabling java 8 compatibility